kubernetes/tautulli/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tautulli

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
      app.kubernetes.io/instance: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
        app.kubernetes.io/instance: tautulli
    spec:
      containers:
      - name: tautulli
        securityContext:
          privileged: true
        image: tautulli/tautulli:v2.18.1@sha256:7feb72192d5f477f2e4e28ed6b871b57478aff693c279462577cb4dad16556de
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
        livenessProbe:
          httpGet:
            path: /status
            port: 8181
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-config
